@@ -1,0 +1,10 @@
+# Installation
+
+## Using Docker
+
+You just need to download and install the wrapper script :
+
+```sh
+curl https://raw.githubusercontent.com/constructions-incongrues/masterbizor/master/wrapper | sudo tee /usr/local/bin/masterbizator
+chmod +x /usr/local/bin/masterbizator
+```
